# chillbox-example-site1

./: .editorconfig  .gitignore  MANIFEST  Makefile  README.md  local.site.json
.github/workflows/: build.yml
api/: .dockerignore  Dockerfile  MANIFEST  README.md  api.secrets.Dockerfile  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  secrets.Dockerfile  secrets.sh  security-issues-from-bandit.txt  setup.py  update-dep.Dockerfile  update-dep.sh  update-requirements.Dockerfile  update-requirements.sh  verify.Dockerfile  verify.sh
api/dep/: Cython-0.29.35-cp311-cp311-musllinux_1_1_x86_64.whl  MarkupSafe-2.1.3-cp311-cp311-musllinux_1_1_x86_64.whl  arq-0.25.0-py3-none-any.whl  bandit-1.7.5-py3-none-any.whl  hatchling-1.17.1-py3-none-any.whl  (+9 more)
chill-dynamic-example/: Dockerfile  site.cfg
chill-static-example/: Dockerfile  MANIFEST  site.cfg
immutable-example/: Dockerfile  Makefile  README.md
local-s3/: local-chillbox.sh  local-shared-secrets.Dockerfile  local-shared.Dockerfile
nginx/: .dockerignore  Dockerfile  default.nginx.conf  nginx.conf  site1.ssl_cert.include
redis/: Dockerfile  install-redis.sh
worker/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  secrets.Dockerfile  security-issues-from-bandit.txt  update-dep-run-audit.sh  update-dep.Dockerfile  update-dep.sh  verify.Dockerfile  verify.sh
worker/dep/: pip_api-0.0.30-py3-none-any.whl  pip_audit-2.5.6-py3-none-any.whl  trove_classifiers-2023.5.24-py3-none-any.whl
worker/src/site1_worker/: __init__.py
(+13 files in other folders)
